Fix unable to scroll long list of subreddits in PWA standalone mode, fix NSFW overlay covering subreddits

--- a/public/styles.css
+++ b/public/styles.css
@@ -6,6 +6,10 @@
   --lightc: #444;
 }
 
+html, body {
+    overflow-y:auto;
+}
+
 body{font-size:18px;font-family:segoe ui,arial,sans-serif;margin:0 auto;background:#white; background: var(--bodyc);
 color:var(--textc);
 }
@@ -339,14 +343,14 @@ div#leftbar {
     margin: 0 auto;
     background: white;
     background: var(--bodyc);
-    z-index: 1000;
+    z-index: 1112;
     padding: 10px;
     border: 1px solid #eee;
     border: 1px solid var(--greyc);
     border-top: 0px;
     box-shadow: 0px 49px 30px #00000033;
     border-radius: 0px 0px 5% 5%;
-    
+
 }
 a.homelinks {
 
@@ -761,14 +765,6 @@ span#taptoopenmenu {
 
 .infotext p {
     font-size: 14px;
-}
-@media all and (display-mode: standalone) {
-header#header {
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    z-index:1000;
 }
 
 div#body {
